--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@ h1 {
     text-align: center;
     color: cornflowerblue;
   }
+h2 {
+    text-align: center;
+    color: cornflowerblue;
+  }
 
 .imgClass{
     max-width: 100%;
